# noctalia

./: .gitignore  CONTRIBUTING.md  CREDITS.md  README.md  example.toml  justfile  meson.build  meson_options.txt  noctalia.scm
.github/workflows/: ci.yml
assets/shaders/: advanced_rect.sksl  effect_cloud.sksl  effect_rain.sksl  effect_sky.sksl  effect_snow.sksl  effect_thunder.sksl  fancy_audio_visualizer.sksl  graph.sksl  screen_corner.sksl  wallpaper_disc.sksl  wallpaper_fade.sksl  wallpaper_honeycomb.sksl  wallpaper_stripes.sksl  wallpaper_wipe.sksl  wallpaper_zoom.sksl
docs/: apple-music-panel-resize-plan.md  apple-music-web-volume-rich-osd-plan.md  cef-graphite-dawn-vulkan-plan.md  cef-nvidia-hardware-video-decode-plan.md  cef-partial-damage-output-plan.md  cef-windowless-multi-browser-plan.md  cef-zero-copy-frame-architecture.md  chromium-ozone-vulkan-access-state-plan.md  discord-web-panel-foundation-plan.md  profiling.md  vulkan-graphite-migration-plan.md
nix/: package.nix
scripts/: fetch_cef.py
src/: main.cpp
tests/: animated_gif_decoder_test.cpp  cef_external_frame_scheduler_test.cpp  cef_message_pump_deadline_test.cpp  cef_pointer_motion_coalescer_test.cpp  cef_renderer_recovery_test.cpp  cef_subprocess_api_contract_test.py  config_path_resolution_test.cpp  config_schema_roundtrip_test.cpp  config_validate_cli_test.sh  graphite_resource_observer_test.cpp  graphite_runtime_effects_test.cpp  image_file_loader_data_uri_test.cpp  niri_window_correlator_test.cpp  nucleus_cpp_deps_contract_test.py  process_test.cpp  single_instance_lock_test.cpp  site_integration_policy_test.cpp  skparagraph_text_renderer_test.cpp  skparagraph_text_service_test.cpp  texture_handle_test.cpp  ui_tree_reconciler_test.cpp  vulkan_result_test.cpp  wayland_toplevels_identity_test.cpp
tools/: bootstrap-nucleus-cpp-deps.sh  capture-noctalia-tracy.sh  check-cpp-abi-contract.py  noctalia-skia.map  nucleus-cpp-deps.py  nucleus-render-sdk.py
(+267 files in other folders)
