option('tests', type: 'feature', value: 'auto', description: 'Build unit tests (auto: on for unsanitized debug builds)')
option('jemalloc', type: 'feature', value: 'auto', description: 'Use jemalloc on glibc builds')
option(
  'native_optimizations',
  type: 'boolean',
  value: false,
  description: 'Optimize for the build machine CPU; output may not be portable',
)
option('enable_cef', type: 'boolean', value: false, description: 'Enable the embedded CEF (Chromium Embedded Framework) browser for the in-shell Apple Music experience.')
option('cef_sdk_path', type: 'string', value: '', description: 'Absolute path to the codec-enabled CEF distribution root. Required when enable_cef=true.')
