option('tests', type: 'feature', value: 'auto', description: 'Build unit tests (auto: on for unsanitized debug builds)')
option('jemalloc', type: 'feature', value: 'auto', description: 'Use jemalloc on glibc builds')
option(
  'native_optimizations',
  type: 'boolean',
  value: false,
  description: 'Optimize for the build machine CPU; output may not be portable',
)
option('cef_sdk_path', type: 'string', value: '', description: 'Absolute path to the required codec-enabled CEF distribution root.')
option('nucleus_render_sdk_path', type: 'string', value: '', description: 'Absolute path to the versioned Nucleus render SDK. Required for the Vulkan/Graphite renderer.')
option('nucleus_cpp_deps_path', type: 'string', value: '', description: 'Absolute path to ABI-matched libc++ builds of sdbus-c++, libqalculate, and toml++. Required.')
option('tracy', type: 'feature', value: 'disabled', description: 'Build the Noctalia executable with Tracy profiling instrumentation.')
option('tracy_source_path', type: 'string', value: '', description: 'Absolute path to the pinned Tracy source tree. Required when -Dtracy=enabled.')
